--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Layout</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Animal Sections</h1>
+    <div class="section lion">
+        <div class="title">Lion</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor odio nec odio suscipit, ut vestibulum enim consequat.</p>
+    </div>
+    <div class="section dolphin">
+        <div class="title">Dolphin</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor odio nec odio suscipit, ut vestibulum enim consequat.</p>
+    </div>
+    <div class="section turtle">
+        <div class="title">Turtle</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor odio nec odio suscipit, ut vestibulum enim consequat.</p>
+    </div>
+</body>
+</html>
+
